--- a/package.json
+++ b/package.json
@@ -9,16 +9,21 @@
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
     "@types/jsonwebtoken": "^9.0.6",
+    "@types/md5": "^2.3.5",
     "@types/multer": "^1.4.12",
     "@types/mysql": "^2.15.26",
     "@types/uuid": "^10.0.0",
+    "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
     "hono": "^3.0.0",
+    "ip2region": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
+    "md5": "^2.3.0",
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nanoid": "^5.0.7",
+    "sharp": "^0.33.5",
     "uuid": "^10.0.0",
     "winston": "^3.14.2"
   },
