--- a/package.json
+++ b/package.json
@@ -12,10 +12,12 @@
     "@types/md5": "^2.3.5",
     "@types/multer": "^1.4.12",
     "@types/mysql": "^2.15.26",
+    "@types/nodemailer": "^6.4.15",
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
+    "execa": "^9.3.1",
     "hono": "^3.0.0",
     "ip2region": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
@@ -23,7 +25,9 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nanoid": "^5.0.7",
+    "nodemailer": "^6.9.14",
     "sharp": "^0.33.5",
+    "simple-git": "^3.26.0",
     "uuid": "^10.0.0",
     "winston": "^3.14.2"
   },
