--- a/package.json
+++ b/package.json
@@ -8,6 +8,7 @@
   },
   "dependencies": {
     "@types/bcryptjs": "^2.4.6",
+    "@types/fs-extra": "^11.0.4",
     "@types/jsonwebtoken": "^9.0.6",
     "@types/md5": "^2.3.5",
     "@types/multer": "^1.4.12",
@@ -18,6 +19,8 @@
     "bcryptjs": "^2.4.3",
     "dayjs": "^1.11.13",
     "execa": "^9.3.1",
+    "fs-extra": "^11.2.0",
+    "fse": "^4.0.1",
     "hono": "^3.0.0",
     "ip2region": "^2.3.0",
     "jsonwebtoken": "^9.0.2",
@@ -25,7 +28,8 @@
     "multer": "^1.4.5-lts.1",
     "mysql": "^2.18.1",
     "nanoid": "^5.0.7",
-    "nodemailer": "^6.9.14",
+    "node-schedule": "^2.1.1",
+    "nodemailer": "^6.9.15",
     "sharp": "^0.33.5",
     "simple-git": "^3.26.0",
     "uuid": "^10.0.0",
