修复因驼峰中间件导致ai接口报错、

--- a/package.json
+++ b/package.json
@@ -3,7 +3,8 @@
   "type": "module",
   "scripts": {
     "dev": "bun run --watch src/index.ts",
-    "start": "bun run index.ts",
+    "start": "bun run --inspect src/index.ts",
+    "build": "bun run build",
     "test": "bun test"
   },
   "dependencies": {
