--- a/.github/workflows/manualDeploy.yml
+++ b/.github/workflows/manualDeploy.yml
@@ -15,7 +15,7 @@ jobs:
         uses: appleboy/ssh-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
+          username: root
           key: ${{ secrets.SERVER_SSH_KEY }}
           script: |
             echo "清空旧的文件..."
@@ -27,7 +27,7 @@ jobs:
         uses: appleboy/scp-action@v0.1.7
         with:
           host: ${{ secrets.SERVER_HOST }}
-          username: ${{ secrets.SERVER_USERNAME }}
+          username: root
           key: ${{ secrets.SERVER_SSH_KEY }}
           source: "src/"  # 修改为上传 src 目录
           target: "/www/wwwroot/firstHonoApi"  # 目标路径
