--- a/.github/workflows/automaticDeploy.yml
+++ b/.github/workflows/automaticDeploy.yml
@@ -1,44 +1,38 @@
-# name: 博客后台部署 (自动触发)
+name: 打包应用并上传阿里云
 
-# # 提交后的触发器
-# on:
-#   push:
-#     branches: [master]
+on:
+    push:
+        branches:
+            - master
 
-# jobs:
-#   deploy:
-#     runs-on: ubuntu-latest
-#     steps:
-#       - uses: actions/checkout@v2
+jobs:
+    build:
+        # runs-on 指定job任务运行所需要的虚拟机环境(必填字段)
+        runs-on: ubuntu-latest
+        steps:
+            # 获取源码
+            - name: 迁出代码
+              # 使用action库  actions/checkout获取源码
+              uses: actions/checkout@master
 
-#       - name: 设置Bun
-#         uses: oven-sh/setup-bun@v1
-#         with:
-#           bun-version: latest
-
-#       - name: 安装依赖
-#         run: bun install
-
-#       - name: 项目构建打包
-#         run: bun run build
-
-#       # 删除旧的文件
-#       - name: 清空旧项目文件
-#         uses: appleboy/ssh-action@v0.1.7
-#         with:
-#           host: ${{ secrets.SERVER_HOST }}
-#           username: ${{ secrets.SERVER_USERNAME }}
-#           key: ${{ secrets.SERVER_SSH_KEY }}
-#           script: |
-#             rm -rf /www/server/nginx/html/admin/*
-
-#       # 或者如果你只想上传构建后的文件
-#       - name: 上传构建后的文件
-#         uses: appleboy/scp-action@v0.1.7
-#         with:
-#           host: ${{ secrets.SERVER_HOST }}
-#           username: ${{ secrets.SERVER_USERNAME }}
-#           key: ${{ secrets.SERVER_SSH_KEY }}
-#           source: "dist/"
-#           target: "/www/server/nginx/html/admin"
-#           strip_components: 1 #这样在上传时会删除源路径中的第一个目录（即 dist 目录），直接将 dist 目录中的文件上传到目标目录。
+            - name: 设置Bun
+              uses: oven-sh/setup-bun@v1
+              with:
+                bun-version: latest
+               
+            # 上传阿里云
+            - name: 发布到腾讯云
+              uses: easingthemes/ssh-deploy@v2.1.1
+              env:
+                  # 私钥
+                  SSH_PRIVATE_KEY: ${{ secrets.SERVER_SSH_KEY }}
+                  # scp参数
+                  ARGS: '-avzr --delete'
+                  # 源目录
+                  SOURCE: 'src/'
+                  # 服务器ip：换成你的服务器IP
+                  REMOTE_HOST: ${{ secrets.SERVER_HOST }}
+                  # 用户
+                  REMOTE_USER: 'root'
+                  # 目标地址
+                  TARGET: '/www/wwwroot/firstHonoApi/src'
