--- a/package.json
+++ b/package.json
@@ -32,6 +32,7 @@
     "nanoid": "^5.0.7",
     "node-schedule": "^2.1.1",
     "nodemailer": "^6.9.15",
+    "openai": "^4.72.0",
     "radash": "^12.1.0",
     "sharp": "^0.33.5",
     "simple-git": "^3.26.0",
