--- a/package.json
+++ b/package.json
@@ -2,8 +2,8 @@
   "name": "my-hono-app",
   "type": "module",
   "scripts": {
-    "dev": "bun run --watch src/index.ts",
-    "start": "bun run --inspect src/index.ts",
+    "dev": "bun run --hot src/index.ts",
+    "start": "bun run --inspect=4000 src/index.ts",
     "build": "bun run build",
     "test": "bun test"
   },
