♻️refactor(middleware): 重构日志中间件并优化错误处理- 重构 Logger 中间件，增加按日期分割的日志文件- 优化错误处理，使用自定义 ServiceError 类 - 在 ApiConfig 中增加对错误的处理- 优化参数校验，引入 Joi 库 - 重构部分服务方法，提高代码可读性和可维护性

--- a/package.json
+++ b/package.json
@@ -25,6 +25,7 @@
     "hono": "^3.0.0",
     "ioredis": "^5.4.1",
     "ip2region": "^2.3.0",
+    "joi": "^17.13.3",
     "jsonwebtoken": "^9.0.2",
     "md5": "^2.3.0",
     "multer": "^1.4.5-lts.1",
