♻️refactor(middleware): 重构 moreLogger 中间件并优化系统服务
- 重构 moreLogger 中间件，优化日志记录逻辑
- 更新 package.json 中的 build脚本，使用 bun build
- 调整系统服务中的日志读取路径和数据处理方式

--- a/package.json
+++ b/package.json
@@ -4,7 +4,7 @@
   "scripts": {
     "dev": "bun run --exit-on-unhandled --hot src/index.ts",
     "start": "bun run --exit-on-unhandled --inspect=4000 src/index.ts",
-    "build": "bun run build",
+    "build": "bun build src/index.ts --outdir dist --target node",
     "test": "bun test"
   },
   "dependencies": {
