--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "@types/uuid": "^10.0.0",
     "axios": "^1.7.7",
     "bcryptjs": "^2.4.3",
+    "bun": "^1.2.9",
     "dayjs": "^1.11.13",
     "execa": "^9.3.1",
     "fs-extra": "^11.2.0",
