--- a/.github/workflows/automaticDeploy.yml
+++ b/.github/workflows/automaticDeploy.yml
@@ -4,7 +4,7 @@ on:
     push:
         branches:
             - master
-
+    workflow_dispatch:  # 添加手动触发支持  
 jobs:
     build:
         # runs-on 指定job任务运行所需要的虚拟机环境(必填字段)
