✨feat(image): 实现大文件分片上传功能
- 新增分片上传逻辑，支持大文件上传
- 优化图片处理流程，提高上传效率
- 更新数据库操作，适配分片上传
- 改进错误处理，提升用户体验

--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "bun": "^1.2.9",
     "dayjs": "^1.11.13",
     "execa": "^9.3.1",
+    "file-type": "^21.0.0",
     "fs-extra": "^11.2.0",
     "fse": "^4.0.1",
     "hono": "^3.0.0",
@@ -36,7 +37,7 @@
     "nodemailer": "^6.9.15",
     "openai": "^4.72.0",
     "radash": "^12.1.0",
-    "sharp": "^0.33.5",
+    "sharp": "^0.34.3",
     "simple-git": "^3.26.0",
     "uuid": "^10.0.0",
     "winston": "^3.14.2"
